crates/cribo/tests/snapshots/requirements@cross_package_mixed_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/cross_package_mixed_import/main.py
---
packages: []
count: 0
