crates/cribo/tests/snapshots/requirements@early_module_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/early_module_reference/main.py
---
packages: []
count: 0
