crates/cribo/tests/snapshots/requirements@entry_module_circular_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/entry_module_circular_import/main.py
---
packages: []
count: 0
