crates/cribo/tests/snapshots/requirements@file_deduplication_basic.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_file_deduplication_basic/main.py
---
packages: []
count: 0
