crates/cribo/tests/snapshots/requirements@forward_reference_attribute_access.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_attribute_access/main.py
---
packages: []
count: 0
