crates/cribo/tests/snapshots/requirements@forward_reference_from_parent_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_from_parent_init/main.py
---
packages: []
count: 0
