crates/cribo/tests/snapshots/requirements@forward_reference_in_exception.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_in_exception/main.py
---
packages: []
count: 0
