crates/cribo/tests/snapshots/requirements@forward_reference_pkg.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_pkg/main.py
---
packages: []
count: 0
