crates/cribo/tests/snapshots/requirements@forward_reference_requests_compat.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/forward_reference_requests_compat/main.py
---
packages:
  - simplejson
count: 1
