crates/cribo/tests/snapshots/requirements@fstring_globals_lifting.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/fstring_globals_lifting/main.py
---
packages: []
count: 0
